[tool.poetry]
name = "pyspc-write-jdx"
version = "0.1.0"
description = "Decode spectral data in JCAMP-DX format"
authors = ["Rustam Giuliev <glvrst@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
